[package]
name = "tasmota-rs"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tasmota"

[dependencies]
regex = "1.10"

# used in structs.rs for the regex
lazy_static = "1.5.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

reqwest = { version = "0.12.4",  features = ["blocking", "json"] }

mac_address = "1.1.7"
ipnet = "2.9.0"

config = { version = "0.14", features = ["json"] }
shellexpand = "3.1"

log = "0.4.22"
pretty_env_logger = "0.5.0"

rayon = "1.10.0"

clap = { version = "4.5.13", features = ["derive"] }
