[package]
name = "tasmota-rs"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tasmota"

[dependencies]
regex = "1.11"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

reqwest = { version = "0.12.14", features = ["blocking", "json"] }

mac_address = "1.1.8"
ipnet = "2.11.0"

config = { version = "0.15", features = ["json"] }
shellexpand = "3.1"

log = "0.4.26"
pretty_env_logger = "0.5.0"

rayon = "1.10.0"

clap = { version = "4.5.31", features = ["derive"] }
