[package]
name = "tasmota-rs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tasmota"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
config = { version = "0.15.11", features = ["json"] }
futures = "0.3.31"
ipnet = "2.11.0"
log = "0.4.27"
mac_address = "1.1.8"
pretty_env_logger = "0.5.0"
regex = "1.11"
reqwest = { version = "0.12.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
